Add the download link, header

--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
 <meta charset="utf-8" />
 <title>David Padilla : Engineer, Manager, Rubyist, Speaker.md</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+<style>
+.jumbotron {
+  background-image: url('img/banner.png');
+  color: white;
+}
+
+footer {
+  text-align: center;
+  margin-bottom: 50px;
+  font-size: 20px;
+}
+</style>
 </head>
 <body>
 <div class="container">
@@ -114,6 +126,10 @@
     <hr/>
     <h2 id="recommendations">Recommendations</h2>
     <p>Upon request</p>
+    <hr/>
+    <footer>
+      <a href="files/david-padilla.pdf">Download as PDF</a>
+    </footer>
   </div>
   </body>
   </html>
