Updated with Visa status

--- a/index.html
+++ b/index.html
@@ -124,6 +124,10 @@ footer {
     <h2 id="spoken-languages">Spoken Languages</h2>
     <p>Fluent in both English and Spanish</p>
     <hr/>
+    <h2 id="recommendations">Visa Status</h2>
+    <p>I have a B1/B2 Visa that allows me to visit the US for periods as long as 6 months.</p>
+    <p>I am also eligible for a TN-1 Visa that would allow me to relocate permanently to the US.</p>
+    <hr/>
     <h2 id="recommendations">Recommendations</h2>
     <p>Upon request</p>
     <hr/>
