--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'/>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta charset="utf-8" />
 <title>David Padilla : Engineer, Manager, Rubyist, Speaker.md</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+<link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'/>
 <style>
 .jumbotron {
   background-image: url('img/banner.png');
@@ -15,6 +17,15 @@ footer {
   text-align: center;
   margin-bottom: 50px;
   font-size: 20px;
+}
+
+body {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 400;
+}
+
+p {
+  font-size: 12pt;
 }
 </style>
 <script>
