--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@ body {
 p {
   font-size: 12pt;
 }
+
+h1, h2, h3 {
+  color: #999;
+}
+
+a {
+  color: #DB3030;
+}
 </style>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
