Move custom CSS to external file

--- a/index.html
+++ b/index.html
@@ -6,36 +6,8 @@
 <meta charset="utf-8" />
 <title>David Padilla : Engineer, Manager, Rubyist, Speaker.md</title>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+<link rel="stylesheet" href="css/overrides.css">
 <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'/>
-<style>
-.jumbotron {
-  background-image: url('img/banner.png');
-  color: white;
-}
-
-footer {
-  text-align: center;
-  margin-bottom: 50px;
-  font-size: 20px;
-}
-
-body {
-  font-family: 'Raleway', sans-serif;
-  font-weight: 400;
-}
-
-p {
-  font-size: 12pt;
-}
-
-h1, h2, h3 {
-  color: #999;
-}
-
-a {
-  color: #DB3030;
-}
-</style>
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
